@@ -109,6 +109,10 @@ site_info_configuration:
     - https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/config/exdb-config-schema.yml
 # ------ ------ ------ ------ ------ ------ ------ ------ ------
 #  Added V1.001 for stash storage server
+# local|server
+  STASH_MODE: local
+  STASH_LOCAL_BASE_DIR: stash-storage
+  #
   STASH_SERVER_URL: sftp://bl-east.rcsb.org
   STASH_SERVER_FALLBACK_URL: sftp://bl-west.rcsb.org
   _STASH_AUTH_USERNAME: 4Thjq6SFXelrqhyawXGkwNHQ2MJQRGjHpedv4mhpRlmIc7muS7YrlSQpS3Rao7EFskrZ
@@ -227,6 +231,10 @@ site_info_remote_configuration:
 #
 # ------ ------ ------ ------ ------ ------ ------ ------ ------
 #  Added V1.001 for stash storage server
+# local|server
+  STASH_MODE: server
+  STASH_LOCAL_BASE_DIR: stash-storage
+  #
   STASH_SERVER_URL: sftp://bl-east.rcsb.org
   STASH_SERVER_FALLBACK_URL: sftp://bl-west.rcsb.org
   _STASH_AUTH_USERNAME: 4Thjq6SFXelrqhyawXGkwNHQ2MJQRGjHpedv4mhpRlmIc7muS7YrlSQpS3Rao7EFskrZ
