@@ -255,3 +255,4 @@
  10-Jul-2020  V0.999 Adding support for derivative branched entity methods
  15-Jul-2020  V1.001 Adding methods to export water counting statistics.
  28-Jul-2020  V1.002 Add stash server config options to example configuration file
+ 28-Jul-2020  V1.003 Tweak stash configuration
